Fix scrollbar issue on safari and improve code scrollbar

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -157,7 +157,8 @@
 
 .post-content .highlight:not(table) {
   margin: 10px auto;
-  background: var(--hljs-bg) !important;
+  background: transparent;
+  border: 1px solid var(--border);
   border-radius: var(--radius);
   direction: ltr;
 }
@@ -205,7 +206,7 @@
   margin: auto 0;
   padding: 10px;
   color: rgb(213, 213, 214);
-  /* background: var(--hljs-bg) !important; */
+  background: var(--code-bg) !important;
   border-radius: var(--radius);
   overflow-x: auto;
   word-break: break-all;
